-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 12
-
Component/s: hotspot
-
b11
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8211721 | 11.0.2 | Martin Doerr | P2 | Closed | Fixed | b01 |
While testing JDK-8208171, we noticed that the RegisterSaver misses code to save and restore the vector registers which are used by C2 compiler. "poll_type == POLL_AT_VECTOR_LOOP" needs to get supported for the vector safepoint handler blob.
- backported by
-
JDK-8211721 [PPC64] Vector registers not saved across safepoint
-
- Closed
-
- relates to
-
JDK-8188139 PPC64: Superword Level Parallelization with VSX
-
- Resolved
-
-
JDK-8208171 PPC64: Enrich SLP support
-
- Resolved
-