8210497: [PPC64] Vector registers not saved across safepoint

Reviewed-by: goetz, lucy